--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
-
 html,
 body {
   padding: 0;
@@ -70,16 +68,16 @@ iframe {
 .post-list {
   margin-bottom: 2em;
 }
-.post-list-date {
+.post-list__date {
   margin-top: 1em;
   margin-bottom: .25em;
 }
-.post-list-title {
+.post-list__title {
   margin-top: 0;
   margin-bottom: .25em;
-  font-family: 'Josefin Sans', sans-serif;
 }
-.post-list-title a {
+.post-list__title a {
+  font-family: 'Josefin Sans', sans-serif;
   text-decoration: none;
 }
 
