--- a/styles/global.css
+++ b/styles/global.css
@@ -14,3 +14,12 @@ a:hover {
 time {
   font-family: Josefin Sans,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
 }
+/* コード */
+p code,
+ol code,
+li code {
+  @apply rounded px-2 py-1 bg-gray-200;
+}
+div code[class*="language-"], pre[class*="language-"] {
+  @apply text-sm;
+}
